<resources>
    <string name="app_name">Дневник коммунальных платежей</string>
    <string name="action_settings">Настройки</string>
    <string name="bill">Счета за</string>
    <string name="chbSumOff">Услуга выключена</string>
    <string name="chbSumOn">Услуга включена</string>
    <string name="choose_service">Выберите услугу</string>
    <string name="cold_water">Холодная вода</string>
    <string name="common">Текущие показания</string>
    <string name="details">Подробнее</string>
    <string name="electricity">Электроэнергия</string>
    <string name="electricityTaxes">Тариф на Электроэнергию</string>
    <string name="from">От</string>
    <string name="gaz">Газ</string>
    <string name="graphics">График</string>
    <string name="head1">Услуга</string>
    <string name="head2">Сумма</string>
    <string name="head3">Статус</string>
    <string name="heat">Отопление</string>
    <string name="history">История</string>
    <string name="homePay">Содержание домов</string>
    <string name="hot_water">Горячая вода</string>
    <string name="indicators">Внести показания</string>
    <string name="intercom">Домофон</string>
    <string name="internet">Интернет</string>
    <string name="month">месяц</string>
    <string name="no_service">Ни одна услуга не выбрана</string>
    <string name="payed">Оплачено</string>
    <string name="previous">Предыдущие показания</string>
    <string name="save">Сохранить</string>
    <string name="saved">Сохранено</string>
    <string name="security">Охрана</string>
    <string name="services">Услуги</string>
    <string name="set_tax">Установите свой тариф</string>
    <string name="sum">Сумма</string>
    <string name="tax">Тариф</string>
    <string name="taxes">Тарифы</string>
    <string name="telephone">Телефон</string>
    <string name="till">До</string>
    <string name="title_first_section">Первая секция</string>
    <string name="title_second_section">Вторая секция</string>
    <string name="volume">Обьем</string>
</resources>
