<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="48.0dip"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:text="@string/from"
            android:textSize="20.0sp" />

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="48.0dip"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:text="@string/till"
            android:textSize="20.0sp" />

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="48.0dip"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/tax"
            android:textSize="20.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/firstFrom"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="0"
            android:textSize="24.0sp" />

        <EditText
            android:id="@+id/firstTill"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:inputType="number"
            android:textSize="24.0sp" />

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="48.0dip"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="="
            android:textSize="24.0sp" />

        <EditText
            android:id="@+id/firstTax"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textSize="24.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/secondFrom"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:textSize="24.0sp" />

        <EditText
            android:id="@+id/secondTill"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:inputType="number"
            android:textSize="24.0sp" />

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="48.0dip"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="="
            android:textSize="24.0sp" />

        <EditText
            android:id="@+id/secondTax"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textSize="24.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/thirdFrom"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:textSize="24.0sp" />

        <TextView
            android:id="@+id/thirdTill"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="∞"
            android:textSize="24.0sp" />

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="48.0dip"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="="
            android:textSize="24.0sp" />

        <EditText
            android:id="@+id/thirdTax"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textSize="24.0sp" />
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.0dip"
        android:background="@color/colorAccent"
        android:onClick="taxes_save"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="18.0sp" />
</LinearLayout>